# anomaly-detection-platform

./: .gitignore  Makefile  README.md  pyproject.toml
app/: Dockerfile  main.py  test_commands.md
app/models/: model_loader.py
app/routers/: model_information.py  prediction.py
app/schemas/: prediction_request.py  prediction_response.py
app/services/: predict.py
docker/: Dockerfile
jupyter/: Dockerfile
notebooks/: hello_world.ipynb  model.joblib  train.ipynb
notebooks/anomaly-detection-platform/: hello_world.ipynb
