[tool.poetry]
name = "app"
version = "0.1.0"
description = "Anomaly detection platform"
authors = ["Glen Lopez"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.22.0"
jupyter = "^1.0.0"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
